--- a/package.json
+++ b/package.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "description": "",
   "main": "app.js",
-  "engines": { "node": "12.18.3" },
+  
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "app.js"
+    
+    "start": "node app.js"
   },
   "author": "",
   "license": "ISC",
@@ -16,5 +16,8 @@
   },
   "devDependencies": {
     "nodemon": "^2.0.7"
+  },
+   "engines": {
+    "node": "12.18.3"
   }
 }
